fix logo if there is a scrollbar

--- a/src/styles/modules/site-header.scss
+++ b/src/styles/modules/site-header.scss
@@ -2,6 +2,8 @@
 .site-logo {
   display: inline-block;
   text-align: center;
+  margin-left: -10px;
+  margin-right: -10px;
 
   h1,
   .h1 {
